--- a/pay-success.html
+++ b/pay-success.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>支付成功</title>
     <link rel="stylesheet" href="css/zy-style.css">
 </head>
-<body >
+
+<body>
     <aside class="charge new-btn">
         <img src="images/6.png">
-        <a href ="map.html" class="login-btn" >充电已完成</a>
+        <div class="new-btn mg-t-4">
+            <a href="map.html" class=" w-8 f_close_btn" id="confirmPay">充电已完成</a>
+        </div>
+        <!-- <a href="map.html" class="login-btn">充电已完成</a> -->
     </aside>
 </body>
+
 </html>
