--- a/ready.html
+++ b/ready.html
@@ -1,104 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>充电桩充电准备</title>
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <title>充电桩充电</title>
     <link rel="stylesheet" href="css/zy-style.css">
 </head>
+
 <body>
     <section id="chargePage" style="display:none;">
-        <label class="charging-tip ">正在充电...</label>
+        <div class="remaind_div">
+            <p>正在充电 . . .</p>
+        </div>
         <aside class="charge new-btn ">
-            <img src="images/4.png" id="charge">
-            <p id="chargeTip" class="dis-none">
+            <img src="images/5.png" id="charge">
+            <p id="chargeTip">
                 已充
                 <br><span id="amountHas">999</span>
                 <span>度</span>
             </p>
-            <label>点击查看当前充电量</label>
+            <!-- <label>点击查看当前充电量</label> -->
         </aside>
-        <div class="new-btn mg-t-4">
-            <a href="javascript:void(0);" class="login-btn" id="stopCharge">结束充电</a>
+        <div class="remaind_bottom_block" style="display: none;">
+            <div class="remaind_pay_msg">
+                <p>正在获取订单信息并计算...</p>
+                <span>若等待时间过长，您可以稍后再试 .</span>
+            </div>
+        </div>
+        <div class="new-btn mg-t-5">
+            <a href="javascript:void(0);" class="login-btn f_close_btn" id="stopCharge">结束充电</a>
         </div>
     </section>
-    <aside class="ready" id="readyPage">
-        <img src="images/3.png">
-        <a href ="javascript:return false;"class="login-btn" >取 &nbsp;&nbsp; &nbsp;  消</a>
+    <aside class="ready img_box" id="readyPage">
+        <img src="images/3.png" class="img_size">
+        <p class="fonts_style">请确认车辆是否已经连接上充电桩</p>
+        <p class="fonts_2_style">充电连接需要 30 ~ 60 秒左右时间 ></p>
+        <!-- <a href="javascript:return false;" class="login-btn">取 &nbsp;&nbsp; &nbsp;  消</a> -->
+        <div class="remaind_div">
+            <p>准备充电中，请稍等 . . .</p>
+        </div>
+        <div class="remaind_bottom_block" style="display: none;">
+            <div class="title">页面等待时间超过60秒无响应？</div>
+            <div>
+                <p>可优先查看充电桩和车辆是否显示充电状态</p>
+                <p>并耐心等待下一步操作</p>
+                <p>若车辆不显示充电状态可取消重新扫描</p>
+                <p>或者换其他充电桩</p>
+            </div>
+        </div>
+        <div class="close_block" id="cancel"></div>
     </aside>
 </body>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/layer/layer.js"></script>
 <script src="js/ajax.js?2019"></script>
 <script>
-    (function(){
-        var internal;
-        var readyObj = {
-            orderSeq:"",
-            init: function () {
-                readyObj.chargeClick();
-                //1秒刷新一次
-                internal = setInterval(function () {
-                    console.log("20秒强制刷新");
-                    readyObj.getFirstPage();
-                }, 20000);
-                readyObj.stopChargeClick();
-            },
-            stopChargeClick: function(){//结束充电
-                $("#stopCharge").on("click",function(){
-                    $.ajaxByPost("/wechat/charge/order/end", {
-                        orderSeq: readyObj.orderSeq,
-                        token: localStorage.token
-                    }, function (data) {
-                        if (data.code == 200) {//成功
-                        } else {
-                            layer.msg(data["message"]);
-                        }
-                    });
-                });
-            },
-            chargeClick:function(){
-                $(".charge").click(function () {
-                    if ($("#charge").attr("src") === "images/4.png") {
-                        $("#charge").attr("src", "images/5.png");
-                        $("#chargeTip").removeClass('dis-none');
-                    }else {
-                        $("#charge").attr("src", "images/4.png");
-                        $("#chargeTip").addClass('dis-none');
-                    }
-                });
-            },
-            getFirstPage: function () {
-                $.ajaxByPost("/wechat/charge/order/list", {
-                    page: 1,
+(function() {
+    var internal;
+    var readyObj = {
+        orderSeq: "",
+        init: function() {
+            // readyObj.chargeClick();
+            readyObj.cancel();
+            readyObj.showBottomRemaind();
+            readyObj.getFirstPage();
+            //10秒刷新一次
+            internal = setInterval(function() {
+                console.log("10秒强制刷新");
+                readyObj.getFirstPage();
+            }, 10000);
+            readyObj.stopChargeClick();
+        },
+        stopChargeClick: function() { //结束充电
+            $("#stopCharge").on("click", function() {
+                $.ajaxByPost("/wechat/charge/order/end", {
+                    orderSeq: readyObj.orderSeq,
                     token: localStorage.token
-                }, function (data) {
-                    if (data.code == 200) {//成功
-                        var d = data["data"];
-                        $("#chargePage").hide();
-                        $("#readyPage").show();
-                        if (d.length > 0) {
-                            readyObj.orderSeq = d[0]["orderSeq"];
-                            var amount = d[0]["amount"];
-                            $("#amountHas").html(amount);
-                            var orderStatus = d[0]["orderStatus"];
-                            if (orderStatus == 3) {
-                                $("#chargePage").show();
-                                $("#readyPage").hide();
-//                                localStorage.orderSeq = "";
-                            }else if(orderStatus == 4){
-                                clearInterval(internal);
-                                window.location.href="pay.html";
-                            }
-                            localStorage.orderSeq = d[0]["orderSeq"];// 将订单编号存储起来，以便重新扫码时使用
-                        }
+                }, function(data) {
+                    if (data.code == 200) {
+                        //成功
+                        console.log('成功');
+                        $('.remaind_bottom_block').slideToggle();
+                        $('.remaind_div p').html('正在结束 . . .');
+                        $('.pay_msg').hide();
+                        $('.new-btn.mg-t-5').hide();
                     } else {
                         layer.msg(data["message"]);
                     }
-                }, true);
-            }
-        };
-        $(readyObj.init);
-    })();
+                });
+            });
+        },
+        chargeClick: function() {
+            $(".charge").click(function() {
+                if ($("#charge").attr("src") === "images/4.png") {
+                    $("#charge").attr("src", "images/5.png");
+                    $("#chargeTip").removeClass('dis-none');
+                } else {
+                    $("#charge").attr("src", "images/4.png");
+                    $("#chargeTip").addClass('dis-none');
+                }
+            });
+        },
+        getFirstPage: function() {
+            $.ajaxByPost("/wechat/charge/order/list", {
+                page: 1,
+                token: localStorage.token
+            }, function(data) {
+                if (data.code == 200) { //成功
+                    var d = data["data"];
+                    $("#chargePage").hide();
+                    $("#readyPage").show();
+                    if (d.length > 0) {
+                        readyObj.orderSeq = d[0]["orderSeq"];
+                        var amount = ((d[0]["chargeTotal"]) / 1000).toFixed(2);
+                        $("#amountHas").html(amount);
+                        var orderStatus = d[0]["orderStatus"];
+                        if (orderStatus == 3) {
+                            $("#chargePage").show();
+                            $("#readyPage").hide();
+                            //localStorage.orderSeq = "";
+                        } else if (orderStatus == 4) {
+                            clearInterval(internal);
+                            window.location.href = "pay.html";
+                        }
+                        localStorage.orderSeq = d[0]["orderSeq"]; // 将订单编号存储起来，以便重新扫码时使用
+                    }
+                } else {
+                    layer.msg(data["message"]);
+                }
+            }, true);
+        },
+        cancel: function(orderSeq) {
+            $('#cancel').click(function() {
+                $.ajaxByPost("/wechat/charge/order/cancel", {
+                    orderSeq: orderSeq || localStorage.orderSeq,
+                    token: localStorage.token
+                }, function(data) {
+                    if (data.code == 200) {
+                        layer.msg('取消成功');
+                        setTimeout(function() {
+                            window.location.href = 'map.html';
+                        }, 300);
+                    } else {
+                        layer.msg(data["message"]);
+                    }
+                })
+            });
+        },
+        showBottomRemaind: function() {
+            setTimeout(function() {
+                $('.remaind_bottom_block').slideToggle();
+            }, 60000);
+        }
+
+    };
+    $(readyObj.init);
+})();
 </script>
+
 </html>
