--- a/map.html
+++ b/map.html
@@ -69,6 +69,7 @@
     <script>
     $(function() {
         var orderStatus;
+        window.orderObj = {};
         $.ajaxByPost("/wechat/charge/order/list", {
             page: 1,
             token: localStorage.token
@@ -78,6 +79,7 @@
                 if (d.length > 0) {
                     orderStatus = d[0]["orderStatus"];
                     var orderSeq = d[0]["orderSeq"];
+                    window.orderObj.orderSeq = orderSeq;
                     if (orderStatus == 2 || orderStatus == 3 || orderStatus == 4) {
                         $('#unscanCharge').show();
                         $('#fixed_mark').show();
