--- a/ready.html
+++ b/ready.html
@@ -67,7 +67,7 @@
             readyObj.getFirstPage();
             //10秒刷新一次
             internal = setInterval(function() {
-                console.log("10秒强制刷新");
+                console.log("10秒刷新");
                 readyObj.getFirstPage();
             }, 10000);
             readyObj.stopChargeClick();
