--- a/map.html
+++ b/map.html
@@ -207,6 +207,7 @@
             return list;
         };
 
+        //两个经纬度坐标计算距离
         function GetDistance(lat1, lng1, lat2, lng2) {
             function rad(d) {
                 return d * Math.PI / 180.0;
