--- a/map.html
+++ b/map.html
@@ -250,6 +250,8 @@
                         $('#scanCharge').show();
                     }
                 }
+            } else {
+                layer.msg(data.message)
             }
         })
         $('#fixed_mark .shcontrul .back_mark').click(function() {
@@ -297,7 +299,6 @@
                     geolocation.getCurrentPosition();
                     AMap.event.addListener(geolocation, 'complete', function(data) {
                         var position = data.position;
-                        console.log(position);
                         mapObj.position = [position.getLng(), position.getLat()];
                         mapObj.setMapCenter(mapObj.position);
                         //                            console.log(position);
@@ -305,7 +306,7 @@
                         stationInit(); //充电桩列表
                     }); //返回定位信息
                     AMap.event.addListener(geolocation, 'error', function(error) {
-                        //                            layer.msg("定位失败");
+                        //layer.msg("定位失败");
                         layer.msg(error.message);
                     }); //返回定位出错信息
                 });
@@ -327,7 +328,7 @@
                                 offset: new AMap.Pixel(-10, -15), //修改label相对于maker的位置
                                 content: d[i]["strStationName"]
                             });
-                            map.setFitView(); //使地图自适应显示到合适的范围
+                            // map.setFitView(); //使地图自适应显示到合适的范围
                             marker.on('click', function(e) {
                                 var _marker = e.target;
                                 var data = _marker.G.extData;
@@ -467,72 +468,67 @@
                     content: content
                 });
             },
-            scanCharge: function() { //扫码充电
-                //                    $("img","#scanCharge").on("click",function(){
-                //
-                //                    });
-            },
             checkPoiList: function() { //检查结果列表是否为空， 为空时显示必要的提示，即#emptyTip
                 $('#panel').toggleClass('empty', !($.trim($('#poiList').html())));
             },
-            searchMap: function() {
-                //搜索框支持自动完成提示
-                var auto = new AMap.Autocomplete({
-                    input: "tipinput"
-                });
-                //构造地点查询类
-                var placeSearch = new AMap.PlaceSearch({
-                    pageSize: 5,
-                    pageIndex: 1,
-                    map: map,
-                    panel: "poiList"
-                });
-                //监听搜索框的提示选中事件
-                AMap.event.addListener(auto, "select", function(e) {
+            // searchMap: function() {
+            //     //搜索框支持自动完成提示
+            //     var auto = new AMap.Autocomplete({
+            //         input: "tipinput"
+            //     });
+            //     //构造地点查询类
+            //     var placeSearch = new AMap.PlaceSearch({
+            //         pageSize: 5,
+            //         pageIndex: 1,
+            //         map: map,
+            //         panel: "poiList"
+            //     });
+            //     //监听搜索框的提示选中事件
+            //     AMap.event.addListener(auto, "select", function(e) {
 
-                    //设置搜索的城市
-                    placeSearch.setCity(e.poi.adcode);
-                    //开始搜索对应的poi名称
-                    placeSearch.search(e.poi.name, function(status, results) {
+            //         //设置搜索的城市
+            //         placeSearch.setCity(e.poi.adcode);
+            //         //开始搜索对应的poi名称
+            //         placeSearch.search(e.poi.name, function(status, results) {
 
-                        if (results.pois && results.pois.length > 0) {
-                            $('#panel').toggleClass('empty');
-                        }
+            //             if (results.pois && results.pois.length > 0) {
+            //                 $('#panel').toggleClass('empty');
+            //             }
 
-                        //显示结果列表
-                        $('#panel').removeClass('hidden');
+            //             //显示结果列表
+            //             $('#panel').removeClass('hidden');
 
-                        //隐藏loading状态
-                        $(document.body).removeClass('searching');
-                    });
-                    //显示loading状态
-                    $(document.body).addClass('searching');
-                });
-                mapObj.checkPoiList();
-                //监听搜索列表的渲染完成事件
-                AMap.event.addListener(mapObj.placeSearch, 'renderComplete', function() {
-                    checkPoiList();
-                });
-                //监听marker/列表的选中事件
-                AMap.event.addListener(mapObj.placeSearch, 'selectChanged', function(results) {
-                    //获取当前选中的结果数据
-                    console.log(results.selected.data);
-                });
-                $('#showHideBtn').click(function() {
-                    $('#panel').toggleClass('hidden');
-                });
+            //             //隐藏loading状态
+            //             $(document.body).removeClass('searching');
+            //         });
+            //         //显示loading状态
+            //         $(document.body).addClass('searching');
+            //     });
+            //     mapObj.checkPoiList();
+            //     //监听搜索列表的渲染完成事件
+            //     AMap.event.addListener(mapObj.placeSearch, 'renderComplete', function() {
+            //         checkPoiList();
+            //     });
+            //     //监听marker/列表的选中事件
+            //     AMap.event.addListener(mapObj.placeSearch, 'selectChanged', function(results) {
+            //         //获取当前选中的结果数据
+            //         console.log(results.selected.data);
+            //     });
+            //     $('#showHideBtn').click(function() {
+            //         $('#panel').toggleClass('hidden');
+            //     });
 
-                $('#clearSearchBtn').click(function() {
+            //     $('#clearSearchBtn').click(function() {
 
-                    //清除搜索框内容
-                    $('#tipinput').val('');
+            //         //清除搜索框内容
+            //         $('#tipinput').val('');
 
-                    //清除结果列表
-                    placeSearch.clear();
-                    $('#panel').addClass('hidden');
-                    mapObj.checkPoiList();
-                });
-            }
+            //         //清除结果列表
+            //         placeSearch.clear();
+            //         $('#panel').addClass('hidden');
+            //         mapObj.checkPoiList();
+            //     });
+            // }
         };
         $(mapObj.init);
     })();
