--- a/my-center.html
+++ b/my-center.html
@@ -1,107 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>个人中心</title>
     <link rel="stylesheet" href="css/zy-style.css">
 </head>
+
 <body class="bg-color-gr">
-<header class="order-bg h-10">
-    <div>
-        <a href="my-msg.html"><img src="images/toux.png" alt=""></a>
-        <label id="tel">137****4578</label>
-        <a href="javascript:;" class="register-btn">剩余能量球 <span id="restAmount">65</span>颗</a>
-        <span>(1颗能量球=1kW·h)</span>
-    </div>
-</header>
-<section class="center-list">
-    <ul>
-        <li>
-            <a href="my-order.html">
+    <header class="order-bg h-10">
+        <div>
+            <a href="my-msg.html"><img src="images/toux.png" alt=""></a>
+            <label id="tel">137****4578</label>
+            <a href="javascript:;" class="register-btn">剩余能量球 <span id="restAmount">65</span>颗</a>
+            <span>(1kw·h=1.3能量球)</span>
+        </div>
+    </header>
+    <section class="center-list">
+        <ul>
+            <li>
+                <a href="my-order.html">
                 <img src="images/my1.png" alt="">
                 <label>我的订单</label>
                 <img src="images/left.png" alt="">
             </a>
-        </li>
-        <li>
-            <a href="get-ball.html">
+            </li>
+            <li>
+                <a href="get-ball.html">
                 <img src="images/my2.png" alt="">
-                <label>我的能量球</label>
+                <label>获取能量球</label>
                 <img src="images/left.png" alt="">
             </a>
-        </li>
-        <li>
-            <a href="apply-friends.html">
+            </li>
+            <li>
+                <a href="apply-friends.html">
                 <img src="images/my3.png" alt="">
                 <label>邀请好友</label>
                 <img src="images/left.png" alt="">
             </a>
-        </li>
-        <li>
-            <a href="javascript:;">
+            </li>
+            <li>
+                <a href="building.html">
                 <img src="images/my4.png" alt="">
                 <label>我的客服</label>
                 <img src="images/left.png" alt="">
             </a>
-        </li>
-    </ul>
-    <a href="javascript:;" class="register-btn" id="exitLogin">
+            </li>
+        </ul>
+        <a href="javascript:;" class="register-btn" id="exitLogin">
         退出登录
     </a>
-</section>
+    </section>
 </body>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/layer/layer.js"></script>
 <script src="js/ajax.js?1026"></script>
 <script>
-    (function(){
-        var userCenterObj = {
-            invitedCode:"",
-            init: function(){
-                userCenterObj.getInfo();
-                userCenterObj.ownInvitedCode();
-                userCenterObj.exitLogin();
-            },
-            getInfo: function(){
-                $.ajaxByGet("/wechat/user/user/info",{
-                    token:localStorage.token
-                },function(data){
-                    if (data.code == 200) {//成功
-                        var d = data["data"];
-//                        window.location.href = "login.html";
-                        var str0 = d["mobilePhone"].substr(0,3),str3 = d["mobilePhone"].substr(7,4);
-                        var tel = str0+"****"+str3;
-                        $("#tel").html(tel);
-                        $("#restAmount").html(d["amount"]);
-                        userCenterObj.invitedCode = d["inviteCode"];
-                    }else{
+(function() {
+    var userCenterObj = {
+        invitedCode: "",
+        init: function() {
+            userCenterObj.getInfo();
+            userCenterObj.ownInvitedCode();
+            userCenterObj.exitLogin();
+        },
+        getInfo: function() {
+            $.ajaxByGet("/wechat/user/user/info", {
+                token: localStorage.token
+            }, function(data) {
+                if (data.code == 200) { //成功
+                    var d = data["data"];
+                    //                        window.location.href = "login.html";
+                    var str0 = d["mobilePhone"].substr(0, 3),
+                        str3 = d["mobilePhone"].substr(7, 4);
+                    var tel = str0 + "****" + str3;
+                    $("#tel").html(tel);
+                    $("#restAmount").html(d["amount"]);
+                    userCenterObj.invitedCode = d["inviteCode"];
+                } else {
+                    layer.msg(data["message"]);
+                }
+            });
+        },
+        ownInvitedCode: function() { //我的推荐码绑定
+            $("#ownInvitedCode").on("click", function() {
+                window.location.href = "referral-code.html?" + encodeURIComponent("inviteCode=" + userCenterObj.invitedCode);
+            });
+        },
+        exitLogin: function() {
+            $("#exitLogin").on("click", function() {
+                $.ajaxByPost("/wechat/user/logout", {
+                    token: localStorage.token
+                }, function(data) {
+                    if (data.code == 200) { //成功
+                        localStorage.token = "";
+                        localStorage.current_url = "";
+                        window.location.href = "login.html";
+                    } else {
                         layer.msg(data["message"]);
                     }
-                });
-            },
-            ownInvitedCode: function(){//我的推荐码绑定
-                $("#ownInvitedCode").on("click",function(){
-                    window.location.href = "referral-code.html?"+encodeURIComponent("inviteCode="+userCenterObj.invitedCode);
-                });
-            },exitLogin: function(){
-                $("#exitLogin").on("click",function(){
-                    $.ajaxByPost("/wechat/user/logout",{
-                        token:localStorage.token
-                    },function(data){
-                        if (data.code == 200) {//成功
-                            localStorage.token = "";
-                            localStorage.current_url = "";
-                            window.location.href = "login.html";
-                        }else{
-                            layer.msg(data["message"]);
-                        }
 
-                    });
                 });
-            }
-        };
-        $(userCenterObj.init);
-    })();
+            });
+        }
+    };
+    $(userCenterObj.init);
+})();
 </script>
+
 </html>
