--- a/register-success.html
+++ b/register-success.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>注册成功</title>
     <link rel="stylesheet" href="css/zy-style.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
+
 <body>
     <section class="register">
         <img src="images/bg.jpg" alt="">
@@ -13,8 +15,9 @@
             <img src="images/name.png" alt="">
             <h1>恭喜你注册成功！</h1>
             <span>获得200颗能量球</span>
-            <a href="order-detail.html" class="register-btn mg-t-7">开始充电</a>
+            <a href="login.html" class="register-btn mg-t-7">去登录</a>
         </aside>
     </section>
 </body>
+
 </html>
