--- a/register-success.html
+++ b/register-success.html
@@ -15,7 +15,7 @@
             <img src="images/name.png" alt="">
             <h1>恭喜你注册成功！</h1>
             <span>获得200颗能量球</span>
-            <a href="login.html" class="register-btn mg-t-7">去登录</a>
+            <a href="map.html" class="register-btn mg-t-7">开始充电</a>
         </aside>
     </section>
 </body>
