--- a/building.html
+++ b/building.html
@@ -22,7 +22,8 @@
 <body>
     <div class="building">
         <img src="images/building.png" alt="">
-        <p>程序员哥哥正在抓紧建设中。。。</p>
+        <p>有急事，可以微信留言</p>
+        <p>也可以拨打：<a href="tel:4009213168">400-921-3168</a> 找我！</p>
     </div>
 </body>
 
