--- a/power-ball.html
+++ b/power-ball.html
@@ -11,7 +11,27 @@
 
 <body>
 	<div id="main">
-		<img src="images/power_center_font.png" class="center_font" alt="">
+		<div id="top">
+			<img src="images/power_logo.png" alt="">
+		</div>
+		<img src="images/power_left_font.png" class="left_font img_margin_top" alt="">
+		<div class="center_font img_margin_top">
+			<img src="images/power_center_font.png" alt="">
+		</div>
+		<div id="code">
+			<div>
+				<div class="code_title">IOS用户交流群</div>
+				<div>
+					<img src="images/code_ios.jpg" alt="">
+				</div>
+			</div>
+			<div>
+				<div class="code_title">安卓用户交流群</div>
+				<div>
+					<img src="images/code_ad.jpg" alt="">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 
