--- a/regist-weal.html
+++ b/regist-weal.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>注册福利</title>
-    <link rel="stylesheet" href="css/zy-style.css">
-</head>
-<body >
-    <aside class="weal">
-        <img src="images/regist-bg.jpg" alt="">
-        <a href="register-tel.html"></a>
-    </aside>
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+	<title>注册福利</title>
+	<link rel="stylesheet" href="css/regist.weal.css">
+</head>
+
+<body>
+	<!-- <aside class="weal">
+		<img src="images/regist-bg.jpg" alt="">
+		<a href="register-tel.html"></a>
+	</aside> -->
+	<div id="main">
+		<img src="images/weal_top_font.png" alt="">
+		<img src="images/weal_car.png" alt="">
+		<img src="images/weal_fell.png" alt="">
+		<div class="button">
+			<a href="register-tel.html">
+				<span>前往注册</span>
+			</a>
+		</div>
+		<img src="images/weal_space.png" alt="">
+		<div class="logo">
+			<img src="images/power_logo.png" alt="">
+		</div>
+		<img src="images/weal_foot.png" class="foot" alt="">
+	</div>
 </body>
+
 </html>
